
[TestPane_View_EmptyTree - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithTree - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                           0b          -│
││ ├─󰈔 acpid                        0b          -│
││ ├─󰈔 add-shell                    0b          -│
││ ├─󰈔 addgroup                     0b          -│
││ ├─󰈔 adduser                      0b          -│
││ ├─󰈔 adjtimex                     0b          -│
││ ├─󰈔 ar                           0b          -│
││ ├─󰈔 arch                         0b          -│
││ ├─󰈔 arp                          0b          -│
││ ├─󰈔 arping                       0b          -│
││ ├─󰈔 ash                          0b          -│
││ ├─󰈔 awk                          0b          -│
││ ├─󰈔 base64                       0b          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                           0b          -│
││ ├─󰈔 acpid                        0b          -│
││ ├─󰈔 add-shell                    0b          -│
││ ├─󰈔 addgroup                     0b          -│
││ ├─󰈔 adduser                      0b          -│
││ ├─󰈔 adjtimex                     0b          -│
││ ├─󰈔 ar                           0b          -│
││ ├─󰈔 arch                         0b          -│
││ ├─󰈔 arp                          0b          -│
││ ├─󰈔 arping                       0b          -│
││ ├─󰈔 ash                          0b          -│
││ ├─󰈔 awk                          0b          -│
││ ├─󰈔 base64                       0b          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭────────────────────────────╮
│Current Layer Contents      │
│                            │
│Name                        │
│├─󰝰 bin                     │
││ ├─󰈔 [                     │
││ ├─󰈔 [[                    │
││ ├─󰈔 acpid                 │
││ ├─󰈔 add-shell             │
││ ├─󰈔 addgroup              │
││ ├─󰈔 adduser               │
││ ├─󰈔 adjtimex              │
││ ├─󰈔 ar                    │
││ ├─󰈔 arch                  │
││ ├─󰈔 arp                   │
││ ├─󰈔 arping                │
││ ├─󰈔 ash                   │
││ ├─󰈔 awk                   │
││ ├─󰈔 base64                │
╰────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                           0b          -│
╰────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Current Layer Contents                                                                                                │
│                                                                                                                      │
│Name                                                                                      Size    UID:GID  Permissions│
│├─󰝰 bin                                                                                                 -   drwxr-xr-x│
││ ├─󰈔 [                                                                                   1.0M          -   -rwxr-xr-x│
││ ├─󰈔 [[                                                                                    0b          -   -rwxr-xr-x│
││ ├─󰈔 acpid                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 add-shell                                                                             0b          -   -rwxr-xr-x│
││ ├─󰈔 addgroup                                                                              0b          -   -rwxr-xr-x│
││ ├─󰈔 adduser                                                                               0b          -   -rwxr-xr-x│
││ ├─󰈔 adjtimex                                                                              0b          -   -rwxr-xr-x│
││ ├─󰈔 ar                                                                                    0b          -   -rwxr-xr-x│
││ ├─󰈔 arch                                                                                  0b          -   -rwxr-xr-x│
││ ├─󰈔 arp                                                                                   0b          -   -rwxr-xr-x│
││ ├─󰈔 arping                                                                                0b          -   -rwxr-xr-x│
││ ├─󰈔 ash                                                                                   0b          -   -rwxr-xr-x│
││ ├─󰈔 awk                                                                                   0b          -   -rwxr-xr-x│
││ ├─󰈔 base64                                                                                0b          -   -rwxr-xr-x│
││ ├─󰈔 basename                                                                              0b          -   -rwxr-xr-x│
││ ├─󰈔 beep                                                                                  0b          -   -rwxr-xr-x│
││ ├─󰈔 blkdiscard                                                                            0b          -   -rwxr-xr-x│
││ ├─󰈔 blkid                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 blockdev                                                                              0b          -   -rwxr-xr-x│
││ ├─󰈔 bootchartd                                                                            0b          -   -rwxr-xr-x│
││ ├─󰈔 brctl                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 bunzip2                                                                               0b          -   -rwxr-xr-x│
││ ├─󰈔 busybox                                                                               0b          -   -rwxr-xr-x│
││ ├─󰈔 bzcat                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 bzip2                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 cal                                                                                   0b          -   -rwxr-xr-x│
││ ├─󰈔 cat                                                                                   0b          -   -rwxr-xr-x│
││ ├─󰈔 chat                                                                                  0b          -   -rwxr-xr-x│
││ ├─󰈔 chattr                                                                                0b          -   -rwxr-xr-x│
││ ├─󰈔 chgrp                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 chmod                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 chown                                                                                 0b          -   -rwxr-xr-x│
││ ├─󰈔 chpasswd                                                                              0b          -   -rwxr-xr-x│
││ ├─󰈔 chpst                                                                                 0b          -   -rwxr-xr-x│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
│├─󰝰 bin                                        -│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                           0b          -│
││ ├─󰈔 acpid                        0b          -│
││ ├─󰈔 add-shell                    0b          -│
││ ├─󰈔 addgroup                     0b          -│
││ ├─󰈔 adduser                      0b          -│
││ ├─󰈔 adjtimex                     0b          -│
││ ├─󰈔 ar                           0b          -│
││ ├─󰈔 arch                         0b          -│
╰────────────────────────────────────────────────╯
---

[TestPane_Update_TreeNavigation - 1]
╭────────────────────────────────────────────────╮
│Current Layer Contents                          │
│                                                │
│Name                             Size    UID:GID│
││ ├─󰈔 [                          1.0M          -│
││ ├─󰈔 [[                           0b          -│
││ ├─󰈔 acpid                        0b          -│
││ ├─󰈔 add-shell                    0b          -│
││ ├─󰈔 addgroup                     0b          -│
││ ├─󰈔 adduser                      0b          -│
││ ├─󰈔 adjtimex                     0b          -│
││ ├─󰈔 ar                           0b          -│
││ ├─󰈔 arch                         0b          -│
││ ├─󰈔 arp                          0b          -│
││ ├─󰈔 arping                       0b          -│
││ ├─󰈔 ash                          0b          -│
││ ├─󰈔 awk                          0b          -│
││ ├─󰈔 base64                       0b          -│
││ ├─󰈔 basename                     0b          -│
╰────────────────────────────────────────────────╯
---
